# llvm-practice

./: Common.props  LLVM-Practice.sln
01_Print/: 01_Print.cpp  01_Print.vcxproj  01_Print.vcxproj.filters
02_Verify/: 02_Verify.cpp  02_Verify.vcxproj  02_Verify.vcxproj.filters  output.ll
03_Execution/: 03_Execution.cpp  03_Execution.vcxproj  03_Execution.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
